--- a/Easy SQL Factory/nbproject/project.properties
+++ b/Easy SQL Factory/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/Easy_SQL_Factory.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jsoup-1.8.1.jar=lib\\jsoup-1.8.1.jar
+file.reference.jsoup-1.8.1.jar=src\\lib\\jsoup-1.8.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
